--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Mocha Spec Runner</title>
-  <link rel="stylesheet" href="node_modules/mocha/mocha.css" />
+  <link rel="stylesheet" href="node_modules/mocha/mocha.css"/>
   <script src="node_modules/jquery/dist/jquery.js"></script>
+  <script src="https://timeago.yarp.com/jquery.timeago.js"></script>
   <script src="node_modules/underscore/underscore.js"></script>
   <script src="node_modules/mocha/mocha.js"></script>
   <script src="node_modules/chai/chai.js"></script>
