--- a/chatterbox.html
+++ b/chatterbox.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="client/styles/styles.css">
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/underscore/underscore.js"></script>
+    <script src="https://timeago.yarp.com/jquery.timeago.js"></script>
     <script>
       // DO NOT MODIFY THIS CODE
       if (!/(&|\?)username=/.test(window.location.search)) {
@@ -23,17 +24,22 @@
   </head>
   <body>
     <div id="main">
-      <h1>chatterbox</h1>
+      <h1>Chatterbox</h1>
       <div class="spinner"><img src="client/images/spiffygif_46x46.gif"></div>
       <div id="rooms">
         Room:
         <select></select>
         <button >Add Room</button>
       </div>
+
       <form action="#" id="send" method="post">
         <input type="text" name="message" id="message"/>
         <input type="submit" name="submit" class="submit"/>
       </form>
+
+      <div id="friendsList">
+       Friends:
+      </div>
     </div>
     <div id="chats"></div>
     <script src="client/env/config.js"></script>
